# Carla-simulator-projects

./: .gitignore  CMakeLists.txt  README.md
docs/: Readme.md
docs/carlAPI/: dockerfile
docs/simulator/: dockerfile
include/: carla_client.h
scripts/: spawn_vehicle.py
scripts/MPC_controller/: mpc_class.py  mpc_controller.py
scripts/PID_controller/: path_followting.py
scripts/cruise_control/: cruise_control.py
scripts/ekf_localization/: Readme.md  data_processing.py  fusion.py  main.py  visualize.py
scripts/reinforcement_learning/: Readme.md  enviroment.py  inference_mode.py  main.py  q_learning.py  q_table.pkl  q_table1.pkl
scripts/reinforcement_learning/videos/: first_iteration.webm
scripts/slam/: main.py  pointcloud_process.py  slam.md  slam.py  utility.py
scripts/visual_odometry/: Readme.md  main.py  trajectory.txt  utility.py  visualOdom.py  visualizer.py
src/: carla_client.cpp  carla_cpp_wrapper.cpp  main.cpp
